refreshed/extensions/Echo/echo.badge.less
#pt-notifications-personaltools { /* "Notifications" item in the personal tools dropdown */
	display: none;
}

.header-dropdown-item {
	&#pt-notifications-notice,
 	&#pt-notifications-alert {
		float: right;
		display: inline;
		margin: 0.9em 0.2em 0 0;
		a {
			color: transparent;
		}
		&:hover {
			background: none;
		}
	}
}

